# rvirsh

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  default.toml
resources/: template.xml  test-net.xml  test-net1.xml  test-pool.xml  test-pool1.xml  test-vol.xml  test.xml  test1.xml  vm.xml
resources/test-delete/: test-vol2.xml  test3.xml
resources/test-snapshot/: test-vol1.xml  test2.xml
src/: delete.rs  domain.rs  help.rs  hostinfo.rs  hostname.rs  lib.rs  list.rs  main.rs  net.rs  pool.rs  pool_list.rs  poweroff.rs  shutdown.rs  snapshot.rs  snapshot_delete.rs  start.rs  suspend.rs  template.rs  undefine.rs  uri.rs  version.rs  vol_delete.rs  vol_list.rs  volume.rs
src/domain/: autostart.rs  create.rs  define.rs  domid.rs  dominfo.rs  domstate.rs  domuuid.rs  dumpxml.rs  info.rs  list.rs  noautostart.rs  poweroff.rs  reboot.rs  reset.rs  resume.rs  run.rs  shutdown.rs  start.rs  suspend.rs  undefine.rs
src/net/: net_autostart.rs  net_clean.rs  net_create.rs  net_define.rs  net_dumpxml.rs  net_info.rs  net_list.rs  net_noautostart.rs  net_start.rs  net_stop.rs  net_undefine.rs  net_uuid.rs
src/pool/: pool_autostart.rs  pool_clean.rs  pool_create.rs  pool_define.rs  pool_delete.rs  pool_dumpxml.rs  pool_info.rs  pool_list.rs  pool_noautostart.rs  pool_refresh.rs  pool_start.rs  pool_stop.rs  pool_undefine.rs  pool_uuid.rs
src/snapshot/: snapshot_create.rs  snapshot_current.rs  snapshot_delete.rs  snapshot_dumpxml.rs  snapshot_info.rs  (+4 more)
tests/: common.rs  domain.rs  integration_test.rs  net.rs  pool.rs  snapshot.rs  template.rs  test.rs  volume.rs
(+11 files in other folders)
