[package]
name = "rvirsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virt = { git = "https://gitlab.com/ryasuoka/libvirt-rust.git", branch="dev" }
config = "0.14.0"
home = "0.5.9"

[build-dependencies]
home = "0.5.9"
