[package]
name = "rvirsh"
version = "0.1.0"
authors = ["Ryosuke Yasuoka <ryasuoka@redhat.com>"]
description = """
rvirsh is a Rust-based virtual machine management tool
built using the libvirt-rs library. It reimplements the
functionality of the virsh command, providing simple
and efficient virtualization operations in Rust.
"""
repository = "https://github.com/YsuOS/rvirsh"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rv"
path = "src/main.rs"

[dependencies]
virt = { git = "https://gitlab.com/ryasuoka/libvirt-rust.git", branch="dev" }
config = "0.14.0"
home = "0.5.9"

[build-dependencies]
home = "0.5.9"
